move unmarshaller logic